# sports-betting

./: .gitignore  Michigan (OSB).xlsx  README.md  arizona.py  bobs.py  connecticut.py  illinois.py  iowa.py  kansas.py  maryland.py  michigan.py  newjersey.py  newyork.py  pennsylvania.py  pyproject.toml  scraper.py  setup.sh  westvirginia.py
Finished States/: Arizona (OSB).xlsx  Connecticut (OSB).xlsx  Connecticut (iGaming).xlsx  Illinois (OSB).xlsx  Kansas (OSB).xlsx  Michigan (Both).xlsx  Michigan (OSB).xlsx  Michigan (iGaming).xlsx  Pennsylvania (OSB).xlsx  Pennsylvania (iGaming).xlsx
Indiana/: Indiana - Gaming Commision.xlsx  Indiana - OSB.xlsx  indiana.py
Iowa/: Iowa (OSB).xlsx
