[tool.poetry]
name = "sports-betting"
version = "0.1.0"
description = ""
authors = ["Casey Rand"]
readme = "README.md"
packages = [{include = "sports_betting"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.0"
selenium = "^4.9.1"
pandas = "^2.0.1"
requests = "^2.30.0"
bs4 = "^0.0.1"
openpyxl = "^3.1.2"
pypdf2 = "^3.0.1"
lxml = "^4.9.2"
html5lib = "^1.1"
sqlalchemy = "0.7.7"
camelot-py = "^0.11.0"
opencv-python = "^4.7.0.72"
ghostscript = "^0.7"
matplotlib = "^3.7.1"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
