[tool.poetry]
name = "sports-betting"
version = "0.1.0"
description = ""
authors = ["Casey Rand <casrand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "1.4.2"
jupyterlab = "^4.0.1"
pypdfium2 = "^4.14.0"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
