[tool.poetry]
name = "sports-betting"
version = "0.1.0"
description = ""
authors = ["Casey Rand <casrand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "1.4.2"
jupyterlab = "^4.0.1"
ghostscript = "^0.7"
pypdfium2 = "^4.14.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
pypdf2 = "<3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
